<resources>
    <string name="app_name">Image Gallery</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="usnerma_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Signup</string>
    <string name="submit_button">Submit</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_confrim_password">Invalid Confirm Password</string>

</resources>